# chat-agents

./: -  .env.example  .env.example.high  .env.example.medium  .gitignore  Dockerfile.pg  _astcheck.py  docker-compose.yml  patchfile.diff
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: Dockerfile.dev  pyproject.toml
backend/app/: agents.py  config.py  db.py  defaults.py  embeddings.py  llm_provider.py  main.py  models.py  parsing.py  rag.py  schemas.py  security.py
backend/app/auth/: __init__.py  service.py
backend/app/routers/: agents.py  auth.py  auth_stub.py  chat.py  documents.py
backend/app/samples/: deepseek_sample.py  gemini models.txt  gemini_context.txt  gemini_new.txt  gemini_sample.txt  gemini_tokens.txt  patch.patch
backend/app/secrets/: gen-lang-client-0992447456-3925b8f1f638.json
backend/app/testing/: gemini.py  gemini_models_vertex.py
frontend/: .gitignore  Dockerfile.dev  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: AgentDirectory.tsx  AgentPicker.tsx  Chat.tsx  LoginForm.tsx  PrincipalPicker.tsx  RoleSwitch.tsx  Uploader.tsx
frontend/app/hooks/: useAgents.ts  useAuth.ts  useDemoPrincipals.ts
frontend/app/upload/: page.tsx
